// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders clusters disabled message 1`] = `
<body>
  <div>
    <section
      class="pf-v6-c-page__main-section pf-m-no-padding pf-m-sticky-top"
      id="page-header"
    >
      <div
        class="pf-v6-l-split"
      >
        <div
          class="pf-v6-l-split__item pf-m-fill"
        >
          <div
            class="pf-v6-l-stack pf-m-gutter"
          >
            <div
              class="pf-v6-l-stack__item pf-m-fill"
            >
              <section
                class="pf-v6-c-page__main-section"
              >
                <div
                  class="pf-v6-l-stack pf-m-gutter"
                >
                  <div
                    class="pf-v6-l-stack__item pf-m-fill"
                  >
                    <div
                      class="pf-v6-l-split pf-m-gutter"
                    >
                      <div
                        class="pf-v6-l-split__item"
                      >
                        <div
                          class="pf-v6-c-content"
                          data-ouia-component-id="OUIA-Generated-Content-1"
                          data-ouia-component-type="PF6/Content"
                          data-ouia-safe="true"
                          data-pf-content="true"
                        >
                          <h1
                            class="pf-v6-c-title pf-m-h1"
                            data-ouia-component-id="OUIA-Generated-Title-1"
                            data-ouia-component-type="PF6/Title"
                            data-ouia-safe="true"
                          >
                            Search
                          </h1>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </section>
            </div>
          </div>
        </div>
        <div
          class="pf-v6-l-split__item"
        >
          <section
            class="pf-v6-c-page__main-breadcrumb"
          >
            <div
              class="pf-v6-l-stack pf-m-gutter"
            >
              <div
                class="pf-v6-l-stack__item pf-m-fill"
                style="display: flex; flex-direction: column; align-items: flex-end; justify-content: flex-end;"
              >
                <div
                  class="css-k008qs"
                  style="align-items: baseline;"
                >
                  <div
                    class="css-19gc7lg"
                  >
                    <span
                      class="pf-v6-c-icon"
                    >
                      <span
                        class="pf-v6-c-icon__content pf-m-warning"
                      >
                        <svg
                          aria-hidden="true"
                          class="pf-v6-svg"
                          fill="currentColor"
                          height="1em"
                          role="img"
                          viewBox="0 0 576 512"
                          width="1em"
                        >
                          <path
                            d="M569.517 440.013C587.975 472.007 564.806 512 527.94 512H48.054c-36.937 0-59.999-40.055-41.577-71.987L246.423 23.985c18.467-32.009 64.72-31.951 83.154 0l239.94 416.028zM288 354c-25.405 0-46 20.595-46 46s20.595 46 46 46 46-20.595 46-46-20.595-46-46-46zm-43.673-165.346l7.418 136c.347 6.364 5.609 11.346 11.982 11.346h48.546c6.373 0 11.635-4.982 11.982-11.346l7.418-136c.375-6.874-5.098-12.654-11.982-12.654h-63.383c-6.884 0-12.356 5.78-11.981 12.654z"
                          />
                        </svg>
                      </span>
                    </span>
                  </div>
                  <span>
                    <div
                      style="display: contents;"
                    >
                      <button
                        class="pf-v6-c-button pf-m-link css-1dkl6e6"
                        data-ouia-component-id="OUIA-Generated-Button-link-1"
                        data-ouia-component-type="PF6/Button"
                        data-ouia-safe="true"
                        style="padding-left: 5px;"
                        type="button"
                      >
                        <span
                          class="pf-v6-c-button__text"
                        >
                          Search is disabled on some clusters.
                        </span>
                      </button>
                    </div>
                  </span>
                </div>
              </div>
            </div>
          </section>
        </div>
      </div>
    </section>
  </div>
</body>
`;

exports[`renders empty message 1`] = `
<body>
  <div>
    <section
      class="pf-v6-c-page__main-section pf-m-no-padding pf-m-sticky-top"
      id="page-header"
    >
      <div
        class="pf-v6-l-split"
      >
        <div
          class="pf-v6-l-split__item pf-m-fill"
        >
          <div
            class="pf-v6-l-stack pf-m-gutter"
          >
            <div
              class="pf-v6-l-stack__item pf-m-fill"
            >
              <section
                class="pf-v6-c-page__main-section"
              >
                <div
                  class="pf-v6-l-stack pf-m-gutter"
                >
                  <div
                    class="pf-v6-l-stack__item pf-m-fill"
                  >
                    <div
                      class="pf-v6-l-split pf-m-gutter"
                    >
                      <div
                        class="pf-v6-l-split__item"
                      >
                        <div
                          class="pf-v6-c-content"
                          data-ouia-component-id="OUIA-Generated-Content-2"
                          data-ouia-component-type="PF6/Content"
                          data-ouia-safe="true"
                          data-pf-content="true"
                        >
                          <h1
                            class="pf-v6-c-title pf-m-h1"
                            data-ouia-component-id="OUIA-Generated-Title-2"
                            data-ouia-component-type="PF6/Title"
                            data-ouia-safe="true"
                          >
                            Search
                          </h1>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </section>
            </div>
          </div>
        </div>
        <div
          class="pf-v6-l-split__item"
        >
          <section
            class="pf-v6-c-page__main-breadcrumb"
          >
            <div
              class="pf-v6-l-stack pf-m-gutter"
            >
              <div
                class="pf-v6-l-stack__item pf-m-fill"
                style="display: flex; flex-direction: column; align-items: flex-end; justify-content: flex-end;"
              />
            </div>
          </section>
        </div>
      </div>
    </section>
  </div>
</body>
`;

exports[`renders unknown message 1`] = `
<body>
  <div>
    <section
      class="pf-v6-c-page__main-section pf-m-no-padding pf-m-sticky-top"
      id="page-header"
    >
      <div
        class="pf-v6-l-split"
      >
        <div
          class="pf-v6-l-split__item pf-m-fill"
        >
          <div
            class="pf-v6-l-stack pf-m-gutter"
          >
            <div
              class="pf-v6-l-stack__item pf-m-fill"
            >
              <section
                class="pf-v6-c-page__main-section"
              >
                <div
                  class="pf-v6-l-stack pf-m-gutter"
                >
                  <div
                    class="pf-v6-l-stack__item pf-m-fill"
                  >
                    <div
                      class="pf-v6-l-split pf-m-gutter"
                    >
                      <div
                        class="pf-v6-l-split__item"
                      >
                        <div
                          class="pf-v6-c-content"
                          data-ouia-component-id="OUIA-Generated-Content-3"
                          data-ouia-component-type="PF6/Content"
                          data-ouia-safe="true"
                          data-pf-content="true"
                        >
                          <h1
                            class="pf-v6-c-title pf-m-h1"
                            data-ouia-component-id="OUIA-Generated-Title-3"
                            data-ouia-component-type="PF6/Title"
                            data-ouia-safe="true"
                          >
                            Search
                          </h1>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </section>
            </div>
          </div>
        </div>
        <div
          class="pf-v6-l-split__item"
        >
          <section
            class="pf-v6-c-page__main-breadcrumb"
          >
            <div
              class="pf-v6-l-stack pf-m-gutter"
            >
              <div
                class="pf-v6-l-stack__item pf-m-fill"
                style="display: flex; flex-direction: column; align-items: flex-end; justify-content: flex-end;"
              >
                <div
                  class="css-k008qs"
                  style="align-items: baseline;"
                >
                  <div
                    class="css-19gc7lg"
                  >
                    <span
                      class="pf-v6-c-icon"
                    >
                      <span
                        class="pf-v6-c-icon__content pf-m-warning"
                      >
                        <svg
                          aria-hidden="true"
                          class="pf-v6-svg"
                          fill="currentColor"
                          height="1em"
                          role="img"
                          viewBox="0 0 576 512"
                          width="1em"
                        >
                          <path
                            d="M569.517 440.013C587.975 472.007 564.806 512 527.94 512H48.054c-36.937 0-59.999-40.055-41.577-71.987L246.423 23.985c18.467-32.009 64.72-31.951 83.154 0l239.94 416.028zM288 354c-25.405 0-46 20.595-46 46s20.595 46 46 46 46-20.595 46-46-20.595-46-46-46zm-43.673-165.346l7.418 136c.347 6.364 5.609 11.346 11.982 11.346h48.546c6.373 0 11.635-4.982 11.982-11.346l7.418-136c.375-6.874-5.098-12.654-11.982-12.654h-63.383c-6.884 0-12.356 5.78-11.981 12.654z"
                          />
                        </svg>
                      </span>
                    </span>
                  </div>
                  <span>
                    <div
                      style="display: contents;"
                    >
                      <button
                        class="pf-v6-c-button pf-m-link css-1dkl6e6"
                        data-ouia-component-id="OUIA-Generated-Button-link-2"
                        data-ouia-component-type="PF6/Button"
                        data-ouia-safe="true"
                        style="padding-left: 5px;"
                        type="button"
                      >
                        <span
                          class="pf-v6-c-button__text"
                        >
                          Search is disabled on some clusters.
                        </span>
                      </button>
                    </div>
                  </span>
                </div>
              </div>
            </div>
          </section>
        </div>
      </div>
    </section>
  </div>
</body>
`;

exports[`renders with Global Search alert & no message 1`] = `
<body>
  <div>
    <section
      class="pf-v6-c-page__main-section pf-m-no-padding pf-m-sticky-top"
      id="page-header"
    >
      <div
        class="pf-v6-l-split"
      >
        <div
          class="pf-v6-l-split__item pf-m-fill"
        >
          <div
            class="pf-v6-l-stack pf-m-gutter"
          >
            <div
              class="pf-v6-l-stack__item pf-m-fill"
            >
              <section
                class="pf-v6-c-page__main-section"
              >
                <div
                  class="pf-v6-l-stack pf-m-gutter"
                >
                  <div
                    class="pf-v6-l-stack__item pf-m-fill"
                  >
                    <div
                      class="pf-v6-l-split pf-m-gutter"
                    >
                      <div
                        class="pf-v6-l-split__item"
                      >
                        <div
                          class="pf-v6-c-content"
                          data-ouia-component-id="OUIA-Generated-Content-4"
                          data-ouia-component-type="PF6/Content"
                          data-ouia-safe="true"
                          data-pf-content="true"
                        >
                          <h1
                            class="pf-v6-c-title pf-m-h1"
                            data-ouia-component-id="OUIA-Generated-Title-4"
                            data-ouia-component-type="PF6/Title"
                            data-ouia-safe="true"
                          >
                            Global search
                            <div
                              style="display: contents;"
                            >
                              <button
                                class="pf-v6-c-button pf-m-plain"
                                data-ouia-component-id="OUIA-Generated-Button-plain-1"
                                data-ouia-component-type="PF6/Button"
                                data-ouia-safe="true"
                                style="padding: 0px; margin-left: 8px; vertical-align: middle;"
                                type="button"
                              >
                                <span
                                  class="pf-v6-c-button__icon"
                                >
                                  <svg
                                    aria-hidden="true"
                                    class="pf-v6-svg"
                                    fill="currentColor"
                                    height="1em"
                                    role="img"
                                    viewBox="0 0 512 512"
                                    width="1em"
                                  >
                                    <path
                                      d="M256 8C119.043 8 8 119.083 8 256c0 136.997 111.043 248 248 248s248-111.003 248-248C504 119.083 392.957 8 256 8zm0 448c-110.532 0-200-89.431-200-200 0-110.495 89.472-200 200-200 110.491 0 200 89.471 200 200 0 110.53-89.431 200-200 200zm107.244-255.2c0 67.052-72.421 68.084-72.421 92.863V300c0 6.627-5.373 12-12 12h-45.647c-6.627 0-12-5.373-12-12v-8.659c0-35.745 27.1-50.034 47.579-61.516 17.561-9.845 28.324-16.541 28.324-29.579 0-17.246-21.999-28.693-39.784-28.693-23.189 0-33.894 10.977-48.942 29.969-4.057 5.12-11.46 6.071-16.666 2.124l-27.824-21.098c-5.107-3.872-6.251-11.066-2.644-16.363C184.846 131.491 214.94 112 261.794 112c49.071 0 101.45 38.304 101.45 88.8zM298 368c0 23.159-18.841 42-42 42s-42-18.841-42-42 18.841-42 42-42 42 18.841 42 42z"
                                    />
                                  </svg>
                                </span>
                              </button>
                            </div>
                          </h1>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </section>
            </div>
          </div>
        </div>
        <div
          class="pf-v6-l-split__item"
        >
          <section
            class="pf-v6-c-page__main-breadcrumb"
          >
            <div
              class="pf-v6-l-stack pf-m-gutter"
            >
              <div
                class="pf-v6-l-stack__item pf-m-fill"
                style="display: flex; flex-direction: column; align-items: flex-end; justify-content: flex-end;"
              />
            </div>
          </section>
        </div>
      </div>
    </section>
  </div>
</body>
`;
